--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>This is my colon repository</h1>
     <p>Hello there ki obostha sobar, kemon acho tomra, soril vala to blah blas</p>
     <img src="images/dp.jpg" alt="">
+    <p>I've to be web developer within next year.</p>
 </body>
 </html>
