college days image added

--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <img src="images/dp.jpg" alt="">
     <p>I've to be web developer within next year.</p>
     <img src="images/gift-shirt.jpg" alt="">
+    <p>remembering college days!</p>
+    <img src="images/college.jpg" alt="">
+    <img src="images/college2.jpg" alt="">
 </body>
 </html>
