--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div>
         <h5>Sajek Valley</h5>
         <p>Sajek valley is known for its natural environment and is surrounded by mountains, dense forest, and grassland hill tracks. Many small rivers flow through the mountains among which the Kachalong and the Machalong are notable. On the way to Sajek valley, one has to cross the Mayni range and the Mayni river. The road to Sajek has high peaks and falls.</p>
-        <img src="images/sajek.jpg" alt="picture of sajek valley">
+        <img src="images/sajek.jpg" alt="picture of sajek">
     </div>
     <img src="images/gift-shirt.jpg" alt="">
     <p>remembering college days!</p>
